--- a/phonehome.html
+++ b/phonehome.html
@@ -181,7 +181,7 @@
 
     /* background */
       #home1{
-        background-image: url("");
+        background-image: url("https://mikemcclaughry.files.wordpress.com/2014/02/library-dark.jpg");
         background-color: #cccccc;
          background-repeat: no-repeat;
          background-position: absolute;
